2009-03-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Update some indices to use the new SortKey columns.

2009-03-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Resources/translators.xml: Updated

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	Disable smooth-scroll by default (pass --smooth-scroll at runtime to
	enable) since still not ready.

2009-03-25  John Millikin  <jmillikin@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/LargeTrackInfoDisplay.cs:
	* src/Libraries/Hyena/Hyena/Tests/StringUtilTests.cs:
	* src/Libraries/Hyena/Hyena/StringUtil.cs:
	When splitting the "Now playing" info text into lines, only split
	if there are at least two info sections (BGO #560886).

2009-03-25  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Widgets/Banshee.Widgets/SeekSlider.cs: Patch from
	Alexander Kojevnikov fixing the position calculation for clicks on the
	seek slider (BGO #575635).

2009-03-24  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/m4/banshee/torrent.m4:
	* src/Extensions/Banshee.Torrent/Banshee.Torrent/TorrentFileDownloadTask.cs:
	* src/Extensions/Banshee.Torrent/Banshee.Torrent/TorrentService.cs: Some
	cleanup and build fixes.

2009-03-24  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs:
	Patch from Alexander Kojevnikov and myself fixing an issue with migration
	caused by using a SqliteModelProvider within the migrations which assume
	the schema has already been updated.

2009-03-23  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Patch from Brian Lucas reenabling and updating the old folder_depth
	handling code (BGO #537367)

2009-03-23  Gabriel Burt  <gabriel.burt@gmail.com>
